<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:theme="@style/Theme.My_Yuka">

    <LinearLayout
        android:id="@+id/title_field"
        android:background="@color/blue"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/appTitle_texr"
            />
        <TextView
            android:id="@+id/apInformations_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/header_text" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/input_field"
        android:background="@color/blue"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/title_field"
        app:layout_constraintEnd_toEndOf="@id/title_field"
        app:layout_constraintTop_toBottomOf="@id/title_field"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:gravity="center"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/hintTextEditField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="6"
            android:layout_marginRight="8dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"/>
        </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/research_button"
                android:text="rechercher"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="3.8"/>
        </LinearLayout>

        <Button
            android:id="@+id/scanner_button"
            android:text="@string/scannerButtonText"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/ingredient_text"
        android:background="@color/blue"
        android:scrollbars = "vertical"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintEnd_toEndOf="@id/input_field"
        app:layout_constraintTop_toBottomOf="@id/input_field"
        android:layout_marginTop="10dp"
        />

    <ImageView
        android:id="@+id/product_image"
        android:contentDescription="@string/productImageContentDescription"
        android:background="@color/blue"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintStart_toStartOf="@id/input_field"
        app:layout_constraintTop_toBottomOf="@id/input_field"
        android:layout_marginTop="10dp"
         />

    <LinearLayout
        android:id="@+id/allergenes_field"
        android:background="@color/blue"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ingredient_text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/allergenes_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allergeneListTitle"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/allergenes_liste_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/qualite_field"
        android:background="@color/blue"
        android:orientation="horizontal"
        android:weightSum="10"
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/allergenes_field"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:id="@+id/nutriscore_image"
            android:contentDescription="@string/nutriscoreImageContentDescription"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:padding="8dp"
            android:layout_marginEnd="8dp"
             />
        <ImageView
            android:id="@+id/nova_image"
            android:contentDescription="@string/novaCodeImageContentDescription"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:padding="8dp"
            />
        <ImageView
            android:id="@+id/palme_image"
            android:contentDescription="@string/palmOilImageContentDescription"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:padding="8dp"
            android:layout_marginStart="8dp"
            />
    </LinearLayout>
    <LinearLayout
            android:id="@+id/manufacture_field"
        android:background="@color/blue"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qualite_field"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/manufacturing_places_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/manufacture_field"
            app:layout_constraintTop_toTopOf="@id/manufacture_field"
            />
        <TextView
            android:id="@+id/countries_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/manufacture_field"
            app:layout_constraintTop_toBottomOf="@id/manufacturing_places_text"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/manufacturer_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="@id/qualite_field"
            app:layout_constraintTop_toBottomOf="@id/qualite_field"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>